--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "promise-polyfill": "^3.1.0",
     "super-animejs": "^3.1.0",
     "super-three": "^0.137.0",
-    "three-bmfont-text": "dmarcos/three-bmfont-text#21d017046216e318362c48abd1a48bddfb6e0733",
+    "three-bmfont-text": "^3.0.1",
     "webvr-polyfill": "^0.10.12"
   },
   "devDependencies": {
